fix bug immagine di sfondo main non visibile in locale

--- a/css/main.css
+++ b/css/main.css
@@ -82,8 +82,9 @@ main, .welcome {
 
 .chat {
     overflow-y: auto;
-    flex-grow: 1;
-    background-image: url(/img/mine.jpg);
+    width: 100%;
+    height: 100%;
+    background: url('../img/mine.jpg');
 }
 
 .btn {
